--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   </script>
 </head>
 <body class="landing">
-
+<%= custom_bootstrap_flash %>
 <!-- Page Wrapper -->
 <div id="page-wrapper">
 
@@ -59,7 +59,6 @@
         </ul>
       </nav>
     </header>
-
   <%= yield %>
   
   <!-- Footer -->
@@ -89,7 +88,6 @@
 <script src="/js/init.js"></script>
 <!-- whats app share -->
 <script type="text/javascript">if(typeof wabtn4fg==="undefined"){wabtn4fg=1;h=document.head||document.getElementsByTagName("head")[0],s=document.createElement("script");s.type="text/javascript";s.src="https://s3.amazonaws.com/mixtapeify/images/whatsapp-button.js";h.appendChild(s);}</script>
-
 </body>
 </html>
 
