--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,7 +1,7 @@
     <section id="banner">
       <div class="inner">
         <h2>Spotihunt</h2>
-        <p>Spotify Playlist Hunter</p>
+        <p>Hunt Your Spotify Playlists</p>
         <ul class="actions">
             <% unless user_signed_in? %>
               <li>
