--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -19,7 +19,14 @@
     </div>
     <div class="12u$">
       <div class="select-wrapper">
+        <%= f.label :playlist, "Select one of your playlists..." %>
         <%= f.select :playlist, options_for_select(@playlists) %>
+      </div>
+    </div>
+    <div class="12u$">
+      <div class="select-wrapper">
+        <%= label_tag :borrowed_playlist, "...or paste link to playlist you want to share:" %>
+        <%= text_field_tag :borrowed_playlist %>
       </div>
     </div>
     <div class="12u$">
