--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -1,6 +1,7 @@
 <article id="main">
   <header>
     <p><%=@status.name%></p>
+    <%= link_to "All Hunts", statuses_path, class: "button special" %>
   </header>
   <section class="wrapper style5">
       <div class="inner">
