--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -6,11 +6,13 @@
   <section class="wrapper style5">
       <div class="inner">
         <section>
+
           <div class="row">                
-            <div class="col-md-8">
+            <div class="col-xs-12 col-md-8">
               <h4>Description</h4>
               <p><%=@status.content%></p>
             </div>
+
             <div class="row">  
               <div class="col-md-4 playlist-voting">
                 <h4>Voting</h4>
@@ -29,6 +31,8 @@
                 <h4>Hunted</h4>
                 <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A<%= @status.spotify_uid ? @status.spotify_uid : @status.user.uid %>%3Aplaylist%3A<%=@status.playlist%>" width="300" height="380" frameborder="0" allowtransparency="true"></iframe><br></p>
                 <%= link_to('Edit', edit_status_path(@status), :class => 'btn btn-info') if @status.user == current_user %>
+                <p>
+                <%= social_share_button_tag((@status.name), :class => 'button special') %>
                 <% unless current_user.follows_playlist?(@status.playlist) %>
                   <%= link_to "Follow Playlist", status_follow_path(@status), method: :post, :class => 'btn btn-success' %>
                 <% end %>
