root_path tuning + share links for hunts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <link rel="stylesheet" href="/css/style.css" />
+
+  <!-- GA -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -20,6 +22,26 @@
 
     ga('create', 'UA-61968290-1', 'auto');
     ga('send', 'pageview');
+  </script>
+
+  <!-- FB -->
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : "<%= Rails.env == 'development' ? '1616039375342096' : '1616038858675481' %>",
+        xfbml      : true,
+        version    : 'v2.3'
+      });
+      $(document).trigger('fbload');
+    };
+
+    (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "//connect.facebook.net/en_US/sdk.js";
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
   </script>
 </head>
 <body class="landing">
