--- a/app/assets/stylesheets/statuses.css.scss
+++ b/app/assets/stylesheets/statuses.css.scss
@@ -262,5 +262,6 @@ a.socialIcon:hover, .socialHoverClass {
 }
 
 .social-media-panel{
-  margin-top: 60px;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
 }
