--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -1,8 +1,8 @@
 <article id="main" data-id="<%= @status.id %>">
   <header>
     <p><%=@status.name%></p>
+    <p><%= render "share_links", status: @status %></p>
     <%= link_to "All Hunts", statuses_path, class: "button special" %>
-    <%= render "share_links", status: @status %>
   </header>
   <section class="wrapper style5">
       <div class="inner">
@@ -33,6 +33,15 @@
                 <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A<%= @status.spotify_uid ? @status.spotify_uid : @status.user.uid %>%3Aplaylist%3A<%=@status.playlist%>" width="300" height="380" frameborder="0" allowtransparency="true"></iframe><br></p>
                 <%= link_to('Edit', edit_status_path(@status), :class => 'btn btn-info') if @status.user == current_user %>
                 <p>
+                <div
+                  class="fb-like"
+                  data-share="true"
+                  data-width="450"
+                  data-show-faces="true">
+                </div>
+
+                <div class="fb-send" data-href="https://developers.facebook.com/docs/plugins/"></div>
+
                 <% unless current_user.follows_playlist?(@status.playlist) %>
                   <%= link_to "Follow Playlist", status_follow_path(@status), method: :post, :class => 'btn btn-success' %>
                 <% end %>
